# my_utils

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
cmake_modules/: FindGlog.cmake  FindMySQL.cmake
include/: boinc_utils.hpp  bsub.hpp  db_insert.hpp  event.hpp  heap.hpp  hofsub.hpp  kosub.hpp  min_heap.hpp  vansub.hpp  vcrop.hpp  video_type.hpp
src/: .ann.cpp.swp  CMakeLists.txt  background_subtract.cpp  blob_count.cpp  boinc_utils.cpp  bsub.cpp  event.cpp  event_data_parser.cpp  event_db_uploader.cpp  fractal.cpp  heap.cpp  hofsub.cpp  image_crop.cpp  kosub.cpp  min_heap.cpp  vansub.cpp  vcrop.cpp  video_splitter.cpp  video_type.cpp  wildlife_bgsub.cpp  wildlife_video_splitter.cpp
test/: .ann_test.cpp.swp  CMakeLists.txt  bsub_test.cpp  min_heap_test.cpp
